Add edit functionality for trips and enhance UI layout in Content1 (Edit button and background color)

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -71,4 +71,6 @@
     <string name="save_trip">Desa el Viatge</string>
     <string name="add_trip">Afeixeix Viatge</string>
     <string name="cancel">Cancelar</string>
+    <string name="edit_trip">Editar Viatge</string>
+    <string name="delete_trip">Eliminar Viatge</string>
 </resources>
