--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -71,4 +71,6 @@
     <string name="save_trip">Guardar Viaje</string>
     <string name="add_trip">Anade Viaje</string>
     <string name="cancel">Cancelar</string>
+    <string name="edit_trip">Editar Viaje</string>
+    <string name="delete_trip">Eliminar Viaje</string>
 </resources>
