Add functionality to add destinations and participants in TravelCreatorDialog and display success message

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -73,4 +73,5 @@
     <string name="cancel">Cancelar</string>
     <string name="edit_trip">Editar Viaje</string>
     <string name="delete_trip">Eliminar Viaje</string>
+    <string name="destination_added">Destinacion añadida!</string>
 </resources>
