--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -73,4 +73,5 @@
     <string name="cancel">Cancelar</string>
     <string name="edit_trip">Editar Viatge</string>
     <string name="delete_trip">Eliminar Viatge</string>
+    <string name="destination_added">Destinacó afegida!</string>
 </resources>
