--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="cancel">Cancel</string>
     <string name="edit_trip">Edit Trip</string>
     <string name="delete_trip">Delete Trip</string>
+    <string name="destination_added">Destination added successfully!</string>
 </resources>
