--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -74,4 +74,7 @@
     <string name="edit_trip">Editar Viaje</string>
     <string name="delete_trip">Eliminar Viaje</string>
     <string name="destination_added">Destinacion añadida!</string>
+    <string name="edit_destination">Editar las Destinaciones</string>
+    <string name="edit_participants">Editar los Participantes</string>
+
 </resources>
