--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,7 @@
     <string name="edit_trip">Edit Trip</string>
     <string name="delete_trip">Delete Trip</string>
     <string name="destination_added">Destination added successfully!</string>
+    <string name="edit_destination">Edit Destinations</string>
+    <string name="edit_participants">Edit Participants</string>
+
 </resources>
