Add login error message popup and update UI for credential validation

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -76,4 +76,6 @@
     <string name="destination_added">Destinacó afegida!</string>
     <string name="edit_destination">Editar les Destinacions</string>
     <string name="edit_participants">Editar els Participants</string>
+    <string name="incorrect_credentials">Credencials Incorrectes</string>
+
 </resources>
