Update minimum SDK version to 26; add error messages for user registration and password mismatch in RegisterScreen

--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -77,5 +77,8 @@
     <string name="edit_destination">Editar les Destinacions</string>
     <string name="edit_participants">Editar els Participants</string>
     <string name="incorrect_credentials">Credencials Incorrectes</string>
+    <string name="register_error">Aquest Usuari ja Existeix</string>
+    <string name="password_error">Les Contrassenyes NO Coinsideixen</string>
+
 
 </resources>
