--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -77,5 +77,7 @@
     <string name="edit_destination">Editar las Destinaciones</string>
     <string name="edit_participants">Editar los Participantes</string>
     <string name="incorrect_credentials">Credenciales Incorrectas</string>
+    <string name="register_error">Este Usuario ya Existe</string>
+    <string name="password_error">Las Contraseñas NO Coinciden</string>
 
 </resources>
