--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,7 @@
     <string name="edit_destination">Edit Destinations</string>
     <string name="edit_participants">Edit Participants</string>
     <string name="incorrect_credentials">Incorrect Credentials</string>
+    <string name="register_error">This User is Already picked</string>
+    <string name="password_error">The Passwords are NOT The Same</string>
 
 </resources>
