--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,5 @@
     <string name="empty_fields">empty_fields</string>
     <string name="invalid_email">invalid_email</string>
     <string name="passwords_do_not_match">passwords_do_not_match</string>
+    <string name="receive_email">receive_email</string>
 </resources>
