--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,9 @@
     <string name="recover_password">recover_password</string>
     <string name="sending_recovery_email">sending_recovery_email</string>
     <string name="forgot_password">forgot_password</string>
+    <string name="verification_email_sent">verification_email_sent</string>
+    <string name="verification_email_failed">verification_email_failed</string>
+    <string name="registration_failed">registration_failed</string>
+    <string name="email_not_verified">email_not_verified</string>
+    <string name="continue_button">continue_button</string>
 </resources>
