--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,7 +62,7 @@
     <string name="register_screen">Pantalla de Registro</string>
     <string name="mail">Correo</string>
     <string name="have_account">¿Tienes una cuenta?</string>
-    <string name="terms_content">Aquí están los términos y condiciones...</string>
+    <string name="terms_content">Aquí están los términos y condiciones…</string>
     <string name="accept">Aceptar</string>
     <string name="new_task">Nueva Tarea</string>
     <string name="add_task">Agregar Tarea</string>
@@ -88,31 +88,29 @@
     <string name="receiveEmail">¿Quieres recibir correos electrónicos?</string>
     <string name="country">País</string>
     <string name="next">Siguiente</string>
-    <string name="empty_fields">empty_fields</string>
-    <string name="invalid_email">invalid_email</string>
-    <string name="passwords_do_not_match">passwords_do_not_match</string>
-    <string name="receive_email">receive_email</string>
-    <string name="password_recovery_email_sent">password_recovery_email_sent</string>
-    <string name="enter_email">enter_email</string>
-    <string name="password_recovery">password_recovery</string>
-    <string name="recover_password">recover_password</string>
-    <string name="sending_recovery_email">sending_recovery_email</string>
-    <string name="forgot_password">forgot_password</string>
-    <string name="verification_email_sent">verification_email_sent</string>
-    <string name="verification_email_failed">verification_email_failed</string>
-    <string name="registration_failed">registration_failed</string>
-    <string name="email_not_verified">email_not_verified</string>
-    <string name="continue_button">continue_button</string>
-    <string name="username_taken">username_taken</string>
-
-    <string name="home_title">Home Page (ES)</string>
-
-    <!-- Errores de validación en Español -->
+    <string name="empty_fields">Por favor, rellena todos los campos obligatorios.</string>
+    <string name="invalid_email">Introduce una dirección de correo electrónico válida.</string>
+    <string name="passwords_do_not_match">Las contraseñas no coinciden.</string>
+    <string name="receive_email">Recibir notificaciones por correo electrónico</string>
+    <string name="password_recovery_email_sent">Correo de recuperación de contraseña enviado correctamente.</string>
+    <string name="enter_email">Introduce tu dirección de correo electrónico</string>
+    <string name="password_recovery">Recuperación de contraseña</string>
+    <string name="recover_password">Recuperar contraseña</string>
+    <string name="sending_recovery_email">Enviando correo de recuperación…</string>
+    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
+    <string name="verification_email_sent">Correo de verificación enviado.</string>
+    <string name="verification_email_failed">Error al enviar el correo de verificación.</string>
+    <string name="registration_failed">El registro ha fallado. Inténtalo de nuevo.</string>
+    <string name="email_not_verified">Tu dirección de correo electrónico no ha sido verificada.</string>
+    <string name="continue_button">Continuar</string>
+    <string name="username_taken">Este nombre de usuario ya está en uso.</string>
+    <string name="home_title">Home Page</string>
     <string name="error_invalid_email">Email inválido</string>
     <string name="error_password_too_short">La contraseña debe tener al menos 6 caracteres</string>
     <string name="error_password_mismatch">La contraseña no coincide</string>
     <string name="error_required_field">Campo requerido</string>
     <string name="error_mobile_digits">Debe tener 10 dígitos</string>
     <string name="error_pin_digits">Debe tener 6 dígitos</string>
+    <string name="hotels">Hoteles</string>
 
 </resources>
